2018-08-12: Ver. 0.3-9
  * Add "get.mpi.comm.ptr()" and "addr.mpi.comm.ptr()" to get MPI_COMM pointers.

2018-08-03: Ver. 0.3-8
  * Fedora28 use "module load mpi/openmpi-x86_64" to obtain mpiexec.
  * Roll back partially to Ver. 0.3-6 because pkg-config may give linking order
    differently that may triggle some dynamic loading problems.

2018-07-29: Ver. 0.3-7
  * Add "pkg-config" to "configure.ac".
  * Check "OpenMPI" and "MPICH2" with "pkg-config".

2018-05-18: Ver. 0.3-6
  * Move "rlecuyer" to Imports.

2018-04-30: Ver. 0.3-6
  * Change some problems related UTF-8, latin1 TeX inputs, especially for
    TeXLive 2018.

2018-02-25: Ver. 0.3-5
  * Fix execmpi().
  * system(wait = FALSE) doesn't work with MPI correctly in Unix-alike systems.
  * Execute MPI in background and dump the results to the log file.
  * Read the results back in from the log file when the job is complete.
  * Windows system can not do the background job, but wait = TRUE is fine.

2018-02-17: Ver. 0.3-5
  * Add execmpi().

2017-12-12: Ver. 0.3-4
  * Added comm.localrank().

2017-12-02: Ver. 0.3-4
  * Fix a "spmd.gatherv_array()" bug.

2017-11-16: Ver. 0.3-4
  * Added "spmd.allreduce.float()" and "spmd.reduce.float()".

2017-09-24: Ver. 0.3-4
  * Fix man help regarding "task.pull()".

2017-07-04: Ver. 0.3-4
  * Fix a finalize bug in "spmd.finalize()" C code.

2016-12-17: Ver. 0.3-3
  * Change web address.

2016-10-08: Ver. 0.3-3
  * Add .travis.yml.

2016-09-25: Ver. 0.3-3
  * Change to "https://cran.r-project.org/...".

2016-07-17: Ver. 0.3-3
  * Improve Makevars.win for both MS-MPI HPC package and SDK package.

2016-07-14: Ver. 0.3-2
  * Use Rtools34.
  * Use MS-MPI v7.1.12437 published on 06/22/2016.

2016-01-27: Ver. 0.3-2
  * Drop initialization of .pbd_env.
  * Migrate to R-3.3.* and R-3.4.*.
  * Use Rtools33.

2015-12-30: Ver. 0.3-1
  * Drop pbdCS temporarily.

2015-12-19: Ver. 0.3-1
  * Add pbd_opt().

2015-11-03: Ver. 0.3-0
  * Simplify global options.

2015-10-24: Ver. 0.3-0