@@ -1,5 +1,6 @@
 2018-08-12: Ver. 0.3-9
   * Add "get.mpi.comm.ptr()" and "addr.mpi.comm.ptr()" to get MPI_COMM pointers.
+  * Add C combine R example in "inst/c_combine_r/"
 
 2018-08-03: Ver. 0.3-8
   * Fedora28 use "module load mpi/openmpi-x86_64" to obtain mpiexec.
